# ai-platform

./: .dockerignore  .env.example  .gitignore  .vercelignore  CLAUDE.md  Dockerfile  HANDOFF-workflow-adapter.md  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  vercel.json
apps/api/: .gitignore  CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 003_add_allowed_origins.py  005_job_queue_result.py  006_rate_limits.py  007_orchestrator.py  009_agent_memory_scopes.py  010_api_key_audit_logs.py  011_api_request_logs.py  012_response_cache.py  013_profile_providers.py  014_response_feedback.py  015_memory_and_report_store.py  016_workflow_action_fields.py  017_api_key_type.py  018_rate_limit_axis.py  019_tenant_id_columns.py  020_tenant_rls.py  021_tenant_id_not_null.py  022_external_id_idempotent.py  023_report_type_career_wealth.py  024_request_log_observability.py  025_job_queue_lease.py
apps/api/scripts/: backfill_profile_authz.py  crawl_idbins.py  e2e_security_test.py  gepa_adapters.py  gepa_metrics.py  gepa_optimize.py  import_db_damage_docs.py  import_kms_docs.py  probe_rerank_floor.py
apps/api/scripts/gepa_data/: build_golden.py  human_eval_pairs.json  saju_golden.json
apps/api/seeds/: domain_mapping.yaml
apps/api/seeds/profiles/: flowsns-ops.yaml  food-recipe.yaml  fortune-saju.yaml  general-assistant.yaml  general-chat.yaml  hr-onboarding.yaml  insurance-contract.yaml  insurance-qa.yaml  kms-assistant.yaml  legal-contract.yaml  supervisor.yaml
apps/api/seeds/workflows/: camping-reservation.yaml  insurance-contract.yaml  saju-compatibility.yaml  saju-discovery.yaml
apps/api/src/: bootstrap.py  config.py  main.py  worker_main.py
apps/api/src/agent/: cache_padding.py  chat_model_factory.py  execution_mode.py  graph_enrich.py  graph_executor.py  graphs.py  nodes.py  planner.py  profile.py  profile_store.py  state.py  tool_adapter.py
apps/api/src/common/: cache_padding.py
apps/api/src/domain/: agent_context.py  agent_profile.py  classifier.py  execution_plan.py  key_type_policy.py  models.py  profile_authz.py
apps/api/src/gateway/: access_policy.py  admin_router.py  auth.py  concurrency_gate.py  crawl_router.py  fortune_router.py  gateway_hooks.py  models.py  rate_limiter.py  report_router.py  router.py  streaming.py  webhook_router.py
apps/api/src/infrastructure/: fact_store.py  job_queue.py  vector_search.py  vector_store.py
apps/api/src/locale/: __init__.py  bundle.py  ko.yaml
apps/api/src/observability/: metrics.py  metrics_store.py  request_log_models.py  request_log_service.py
apps/api/src/orchestrator/: embedding_router.py  llm_adapter.py  orchestrator.py  profile_router.py  tenant.py
apps/api/src/pipeline/: chunker.py  ingest.py  lock.py
apps/api/src/router/: ai_router.py  context_resolver.py  execution_plan.py  graph_cache.py  intent_classifier.py  mode_selector.py  provider_policy.py  provider_router.py  semantic_classifier.py  strategy_builder.py  token_match.py
apps/api/src/safety/: base.py  faithfulness.py  pii_filter.py  response_policy.py
apps/api/src/services/: domain_mapping.py  feedback_models.py  feedback_service.py  fortune_prompts.py  fortune_service.py  kms_graph_client.py  kms_sync.py  link_monitor.py  myo_play_prompts.py  response_cache.py  response_cache_models.py  saju_report_service.py  tenant_service.py
apps/api/src/supervisor/: __init__.py  authz.py  graph.py  limits.py  models.py  planner_llm.py  scoped_context.py  state.py  sticky_guard.py  subagent_runner.py  supervisor.py
apps/api/src/tools/: authz.py  base.py  registry.py
apps/api/src/workflow/: action_client.py  checkpointer.py  context_adapter.py  definition.py  (+10 more)
apps/api/static/: docs.html
apps/api/tests/: conftest.py  test_access_policy.py  test_action_client.py  test_adaptive_retry.py  test_admin_api.py  test_agent_caps.py  test_agent_state.py  test_anthropic_prompt_caching.py  test_async_ingest.py  test_auth.py  test_auth_rs256.py  test_auth_user_type.py  test_cache_callsites.py  test_chat_directive_injection.py  test_checkpointer_bootstrap.py  test_chunker.py  test_classify_intent_route.py  test_concurrency_gate.py  test_concurrency_gate_route.py  test_context_adapter.py  test_db_damage_import.py  test_decompose_intent_hints.py  test_decompose_safe_fallback.py  test_detect_sticky_guard.py  test_docforge_client.py  test_domain_mapping.py  test_embedding_router.py  test_embedding_router_cache.py  test_engine_single_save.py  test_entity_filter.py  test_exceptions.py  test_execution_plan.py  test_failover_llm.py  test_faithfulness_citation.py  test_faithfulness_guard.py  test_feedback_service.py  test_flowsns_client.py  test_flowsns_tools.py  test_gateway_integration.py  test_graph_builder.py  (+103 more)
(+568 files in other folders)
