[project]
name = "ai-platform"
version = "0.1.0"
description = "Universal Agent Platform - Profile 기반 도메인별 AI 에이전트 플랫폼"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "langgraph>=0.3.0",
    "langchain-core>=0.3.0",
    # ChatOpenAI 는 OpenAI 벤더용이 아니다 — DGX ollama 의 OpenAI 호환 /v1 shim 과 로컬 MLX
    # 서버를 치는 클라이언트다(api_key="not-needed"). 상용 퇴역(2026-07-16) 후 서빙 경로의
    # 필수 의존이라 optional extra 가 아니라 core 다. 지우면 agentic 채팅이 통째로 죽는다.
    "langchain-openai>=0.3.0",
    # LangGraph Postgres 체크포인터 (psycopg v3 기반, asyncpg와 별도 드라이버)
    # <3.1.0 상한 필수: 3.1.0은 langgraph-checkpoint>=4.1.0 요구, 설치된 4.0.1과 충돌.
    "langgraph-checkpoint-postgres>=3.0.5,<3.1.0",
    "psycopg[binary,pool]>=3.2.0",
    "httpx>=0.28.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "numpy>=1.26.0",
    "tiktoken>=0.8.0",
    "pyyaml>=6.0",
    "sse-starlette>=2.0.0",
    "python-multipart>=0.0.9",
    "PyJWT>=2.8.0",
    "cryptography>=42.0",
    "sqlalchemy[asyncio]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0",
    "respx>=0.21",
]
local = [
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
]
ollama = [
    "langchain-ollama>=0.3.0",
]
# openai / anthropic extra 는 2026-07-16 상용 퇴역과 함께 제거했다.
# 서빙 경로에 벤더 SDK 는 없다 — primary 는 DGX Spark, 폴백은 로컬 MLX/ollama 뿐이다.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: 3-서비스 라이브 E2E (AIP_E2E_LIVE=1 게이트, tests/e2e/)",
    "live: 라이브 서비스 의존(KMS:3001/ai-platform:8020/docforge:5051 + OCR:5052/임베딩:8103)",
    "contract: 라이브 의존 없는 계약 mock 테스트 — AIP_E2E_LIVE 게이트 면제(항상 실행)",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
